# endstone-sethome

./: .gitignore  README.md  pyproject.toml
src/endstone_sethome/: __init__.py  config.toml  sethome.py
