[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-sethome"
version = "0.1.0"
dependencies = []
authors = [
    { name = "ArkanDash", email = "suckgamer0@gmail.com" },
]
description = "A simple sethome plugin for Endstone servers"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "discord"]

[project.urls]
Homepage = "https://github.com/ArkanDash/endstone-sethome"

[project.entry-points."endstone"]
sethome = "endstone_sethome:Sethome"